second set added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinod's Resume</title>
 </head>
-<body >
+<body style="background-color: #eaf6f6">
     <table cellspacing="10">
         <tr>
             <td>
