Final Resume using HTML only

--- a/index.html
+++ b/index.html
@@ -23,16 +23,11 @@
     </table>
     <hr>
 
-    <table cellspacing="10">
+    <table>
         <tr>
-            <td colspan="2"> 
-                <h3>Experience</h3> 
-            </td>
+            <h3>Experience</h3> 
         </tr>
         <tr>
-            <th>
-                Work
-            </th>
             <th>
                 Organization
             </th>
@@ -42,9 +37,6 @@
         </tr>
         <tr>
             <td>
-                Senior Technical Suppport Engineer
-            </td>
-            <td>
                 Servicenow development center, India.
             </td>
             <td>
@@ -52,9 +44,6 @@
             </td>
         </tr>
         <tr>
-            <td>
-                Java Applicaiton/Production support analyst
-            </td>
             <td>
                 Verizon data services, India.
             </td>
@@ -64,15 +53,145 @@
         </tr>
         <tr>
             <td>
-                Java Applicaiton/Production support engineer
-            </td>
-            <td>
                 Tata Consultancy Services(TCS).
             </td>
             <td>
                 3 Years 6 Months.
             </td>
         </tr>
+
+    </table>
+    <hr>
+    <table>
+        <th>
+            <h3>Project Details</h3>
+        </th>
+        <tr>
+            <th>
+                Organization
+            </th>
+            <th>
+                Reponsibilities
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <strong>Servicenow <br> <br> Project: Platform Technologies </strong> 
+            </td> 
+            <td>
+                <ul>
+                    <li>
+                        Supporting enterprise application platform related issues that
+                        <br> are raised by corporate clients in manifold.
+                    </li>
+                    <li>
+                        Developing scripts to automate the daily repeated work using <strong> Python/Unix <br>Shell Scripting ,  SQL. </strong>                        
+                    </li>
+                    <li>
+                        Handling <strong> escalated cases </strong> by liasing with customer thereby troubleshooting <br>
+                        and providing solutions.
+                    </li>
+                    <li>
+                        Worked on complicated issues , found out the <strong> RCA </strong>  and provided the fixes. 
+                    </li>
+                    <li>
+                        Troubleshooting the issue related to business rules, client scripts and script <br> includes  written in the <strong> Glide Class and Javascript </strong>.
+                    </li>
+                    <li>
+                        As a senior engineer, <strong>assisting junior engineers</strong> in their cases and also <br>
+                        delivering the lession on how to approach any issue to resolve. 
+                    </li>
+                    <li>
+                        Troubleshooting the issue related to tables and dictionaries, which are one of the <br> critical areas of the platform.
+                    </li>
+                    <li>
+                        Analysed sql queries generated from the reports and there by working <br> closely with development team to get the issue related to sqls fixed.
+                    </li>
+                    <li>
+                        Creating knowledge articles for any new concept I come across which is not <br>
+                        documented.
+                    </li>
+                    <li>
+                        Reproducing the issues on the lower environments as well as on the OOB <br> environments and creating the defects to development team and following up till <br> closure.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+        
+        <tr>
+            <td>
+                <strong>Verizon Data Services <br> India PVT LTD. <br> <br> Project: SMART(Service Management and <br> Account Resource Tool) <br> and EPS(Enterprise Prepaid System) </strong> 
+            </td>
+            <td>
+                <ul>
+                    <li>
+                        Wrote <strong>unix shell scripts</strong> to automate the daily repeated work.
+                    </li>
+                    <li>
+                        Wrote and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
+                    </li>
+                    <li>
+                        Strong understanding of support tickets, monitoring  automated batch jobs, <br> provisioning orders regularly. Also resolving them within the SLAs.
+                    </li>
+                    <li>
+                        <strong>Troubleshoot the java code </strong>on the local environment to find any <br> code related issues and suggest changes 
+                        to the dev team via jira ticket.
+                    </li>
+                    <li>
+                        <strong>Automated daily critical reports</strong> on credit card and autopay transactions.
+                    </li>
+                    <li>
+                        Daily on-call support. Worked in onshore-offshore model sync up done over calls and email.
+                    </li>
+                    <li>
+                        Created and tracked problems end-to-end as and when required.
+                    </li>
+                    <li>
+                        Have done java core dump analysis, thread dump analysis to find performance <br> issues of the service.
+                    </li>
+                    <li>
+                        Automated OrderManagement service using the unix shell script with SQL/PLSQL.
+                    </li>
+                    <li>
+                        Automated the process to backup the ER war files of all the applications using <br> unix shell scipt.
+                    </li>
+                    <li>
+                        Using Jenkins, urban code to deploy, promote the code, manage the downtimes, <br> and bouncing the JVMs post deploy.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <strong>Tata Consultancy Services<br> <br> Project-1: CAAS(Collection <br> Automation and Accounting System)  <br> <br> Project-2: TTL MCCI </strong> 
+            </td> 
+            <td>
+                <ul>
+                    <li>
+                        Strong understanding of support tickets,monitoring automated batch jobs.
+                    </li>
+                    <li>
+                        <strong>Troubleshoot the java code </strong> in the local environment and suggested changes <br> to the dev team.
+                    </li>
+                    <li>
+                        <strong>Automated</strong> critical reports which were sent to client on month ends.            
+                    </li>
+                    <li>
+                        <strong>Automated</strong> cheque realization process.
+                    </li>
+                    <li>
+                        Analyze and fix production incidents / requests.
+                    </li>
+                    <li>
+                        <Strong> Report root cause analysis </Strong> of the incidents and present ideas to prevent the incidents <br> from re-occurring in future.
+                    </li>
+                    <li>
+                        Involved in implementation of new enhancements to the portal and also in <br> the post production support for supporting the application.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+
     </table>
 
     <hr>
@@ -80,7 +199,7 @@
     <table cellspacing="10">
         <tr>
             <td colspan="2"> 
-                <h3>Skills</h3> 
+                <h3>Tools and Technologies</h3> 
             </td>    
         </tr>
 
@@ -94,18 +213,31 @@
         </tr>
         <tr>
             <td>
-                Core Java  ⭐⭐⭐
+                Core Java    ⭐⭐⭐
             </td>
             <td>
-                Oracle SQL   ⭐⭐⭐⭐
+                Oracle SQL    ⭐⭐⭐⭐
             </td>
         </tr>
         <tr>
             <td>
-                Servicenow  ⭐⭐⭐
+                Servicenow    ⭐⭐⭐
             </td>
             <td>
-                Javascript   ⭐⭐⭐
+                Javascript    ⭐⭐⭐
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Splunk    ⭐⭐⭐
+            </td>
+            <td>
+                Toad/SQL Developer    ⭐⭐⭐
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Jenkins    ⭐⭐⭐
             </td>
         </tr>
     </table>
