modified wrote to developed

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             <td>
                 <ul>
                     <li>
-                        Wrote <strong>unix shell scripts</strong> to automate the daily repeated work.
+                        Developed <strong>unix shell scripts</strong> to automate the daily repeated work.
                     </li>
                     <li>
-                        Wrote and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
+                        Developed and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
                     </li>
                     <li>
                         Strong understanding of support tickets, monitoring  automated batch jobs, <br> provisioning orders regularly. Also resolving them within the SLAs.
