Final resume with CSS in-place

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinod's Resume</title>
+    <link rel="stylesheet" href="css/resume.css">
 </head>
-<body style="background-color: #eaf6f6">
+<body>
     <table cellspacing="10">
         <tr>
             <td>
@@ -24,9 +25,9 @@
     <hr>
 
     <table>
-        <tr>
+        <th>
             <h3>Experience</h3> 
-        </tr>
+        </th>
         <tr>
             <th>
                 Organization
@@ -125,10 +126,10 @@
             <td>
                 <ul>
                     <li>
-                        Developed <strong>unix shell scripts</strong> to automate the daily repeated work.
+                        Wrote <strong>unix shell scripts</strong> to automate the daily repeated work.
                     </li>
                     <li>
-                        Developed and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
+                        Wrote and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
                     </li>
                     <li>
                         Strong understanding of support tickets, monitoring  automated batch jobs, <br> provisioning orders regularly. Also resolving them within the SLAs.
