--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 <body>
+    <h1>My Contact Details </h1>
     <table cellspacing="10">
         <tr>
             <td>
