final commit after adding css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <th>
                 Organization
             </th>
-            <th>
+            <th class="reponsibilities">
                 Reponsibilities
             </th>
         </tr>
@@ -83,37 +83,37 @@
                 <ul>
                     <li>
                         Supporting enterprise application platform related issues that
-                        <br> are raised by corporate clients in manifold.
+                         are raised by corporate clients in manifold.
                     </li>
                     <li>
-                        Developing scripts to automate the daily repeated work using <strong> Python/Unix <br>Shell Scripting ,  SQL. </strong>                        
+                        Developing scripts to automate the daily repeated work using <strong> Python/Unix Shell Scripting ,  SQL. </strong>                        
                     </li>
                     <li>
-                        Handling <strong> escalated cases </strong> by liasing with customer thereby troubleshooting <br>
+                        Handling <strong> escalated cases </strong> by liasing with customer thereby troubleshooting 
                         and providing solutions.
                     </li>
                     <li>
                         Worked on complicated issues , found out the <strong> RCA </strong>  and provided the fixes. 
                     </li>
                     <li>
-                        Troubleshooting the issue related to business rules, client scripts and script <br> includes  written in the <strong> Glide Class and Javascript </strong>.
+                       <p> Troubleshooting the issue related to business rules, client scripts and script  includes  written in the <strong> Glide Class and Javascript </strong>.</p>
                     </li>
                     <li>
-                        As a senior engineer, <strong>assisting junior engineers</strong> in their cases and also <br>
+                        As a senior engineer, <strong>assisting junior engineers</strong> in their cases and also 
                         delivering the lession on how to approach any issue to resolve. 
                     </li>
                     <li>
-                        Troubleshooting the issue related to tables and dictionaries, which are one of the <br> critical areas of the platform.
+                        Troubleshooting the issue related to tables and dictionaries, which are one of the  critical areas of the platform.
                     </li>
                     <li>
-                        Analysed sql queries generated from the reports and there by working <br> closely with development team to get the issue related to sqls fixed.
+                        Analysed sql queries generated from the reports and there by working  closely with development team to get the issue related to sqls fixed.
                     </li>
                     <li>
-                        Creating knowledge articles for any new concept I come across which is not <br>
+                        Creating knowledge articles for any new concept I come across which is not 
                         documented.
                     </li>
                     <li>
-                        Reproducing the issues on the lower environments as well as on the OOB <br> environments and creating the defects to development team and following up till <br> closure.
+                        Reproducing the issues on the lower environments as well as on the OOB  environments and creating the defects to development team and following up till  closure.
                     </li>
                 </ul>
             </td>
@@ -129,13 +129,13 @@
                         Wrote <strong>unix shell scripts</strong> to automate the daily repeated work.
                     </li>
                     <li>
-                        Wrote and troubleshoot the <strong> plsql procedures /packages/functions <br> as well as Oracle SQL queries. </strong>                
+                        Wrote and troubleshoot the <strong> plsql procedures /packages/functions  as well as Oracle SQL queries. </strong>                
                     </li>
                     <li>
-                        Strong understanding of support tickets, monitoring  automated batch jobs, <br> provisioning orders regularly. Also resolving them within the SLAs.
+                        Strong understanding of support tickets, monitoring  automated batch jobs,  provisioning orders regularly. Also resolving them within the SLAs.
                     </li>
                     <li>
-                        <strong>Troubleshoot the java code </strong>on the local environment to find any <br> code related issues and suggest changes 
+                        <strong>Troubleshoot the java code </strong>on the local environment to find any  code related issues and suggest changes 
                         to the dev team via jira ticket.
                     </li>
                     <li>
@@ -148,16 +148,16 @@
                         Created and tracked problems end-to-end as and when required.
                     </li>
                     <li>
-                        Have done java core dump analysis, thread dump analysis to find performance <br> issues of the service.
+                        Have done java core dump analysis, thread dump analysis to find performance  issues of the service.
                     </li>
                     <li>
                         Automated OrderManagement service using the unix shell script with SQL/PLSQL.
                     </li>
                     <li>
-                        Automated the process to backup the ER war files of all the applications using <br> unix shell scipt.
+                        Automated the process to backup the ER war files of all the applications using  unix shell scipt.
                     </li>
                     <li>
-                        Using Jenkins, urban code to deploy, promote the code, manage the downtimes, <br> and bouncing the JVMs post deploy.
+                        Using Jenkins, urban code to deploy, promote the code, manage the downtimes,  and bouncing the JVMs post deploy.
                     </li>
                 </ul>
             </td>
@@ -172,7 +172,7 @@
                         Strong understanding of support tickets,monitoring automated batch jobs.
                     </li>
                     <li>
-                        <strong>Troubleshoot the java code </strong> in the local environment and suggested changes <br> to the dev team.
+                        <strong>Troubleshoot the java code </strong> in the local environment and suggested changes  to the dev team.
                     </li>
                     <li>
                         <strong>Automated</strong> critical reports which were sent to client on month ends.            
@@ -184,10 +184,10 @@
                         Analyze and fix production incidents / requests.
                     </li>
                     <li>
-                        <Strong> Report root cause analysis </Strong> of the incidents and present ideas to prevent the incidents <br> from re-occurring in future.
+                        <Strong> Report root cause analysis </Strong> of the incidents and present ideas to prevent the incidents  from re-occurring in future.
                     </li>
                     <li>
-                        Involved in implementation of new enhancements to the portal and also in <br> the post production support for supporting the application.
+                        Involved in implementation of new enhancements to the portal and also in  the post production support for supporting the application.
                     </li>
                 </ul>
             </td>
