--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Servicenow development center, India.
             </td>
             <td>
-                Since 2 Years, Currenlty working here.
+                Since 2 Years 6 months, Currenlty working here.
             </td>
         </tr>
         <tr>
