--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <td>
                 <p>
                     <h1>Vinod Kumar B </h1>
-                     Working as Senior technical support engineer at <strong> Servicenow </strong> 
+                     Working as Senior software engineer at <strong> Servicenow </strong> 
                 </p>
             </td>
         </tr>
