added new image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="10">
         <tr>
             <td>
-                <img src="my_images\resize-1632235788296362681myimage.jpg" alt="my image">
+                <img src="my_images\resume_resize.jpg" alt="my image">
             </td>
             <td>
                 <p>
