added current project details

--- a/index.html
+++ b/index.html
@@ -77,6 +77,39 @@
         </tr>
         <tr>
             <td>
+                <strong>Servicenow <br> <br> Project: Support & Impact Portal Admin </strong> 
+            </td> 
+            <td>
+                <ul>
+                    
+                    <li>
+                        As an admin, I support end to end maintenance activities on the intances starting from cloneing/upgrading/troubleshooting users issues.
+                    </li>
+                    <li>
+                        Regular deployements of the new changes. And Worked on failed deployements.
+                    </li>
+                    <li>
+                        Handling <strong> escalated cases </strong> by liasing with requestor thereby troubleshooting 
+                        and providing solutions.
+                    </li>
+                    <li>
+                        Assiting new team members as well as juniors associates in their activities or tickets. 
+                    </li>
+                    <li>
+                       <p> Troubleshooting the issue related to business rules, client scripts,ui policies (for catalog as well) and script  includes  written in the <strong> Glide Class and Javascript </strong>.</p>
+                    </li>
+                    <li>
+                        Troubleshooting the issue related support portal as well as impact portal which build using sp api and angular js.
+                    </li>
+                    <li>
+                        Creating knowledge articles for any new concept I come across which is not 
+                        documented.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <strong>Servicenow <br> <br> Project: Platform Technologies </strong> 
             </td> 
             <td>
