--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
                 Current address: 
             </td>
             <td>
-                <p><strong>Sutahat Tanti Sahi Buxi Bazar,<br> Cuttack. PIN 753001 <br> Odisha. </strong> </p>
+                <p><strong>Flat 101, Plot 146, Road no.8 , Ayyappa Society Road, Madhapur,<br> Hyderabad. PIN 500081 <br> Telangana. </strong> </p>
             </td>
         </tr>
 
@@ -32,7 +32,7 @@
                 Father's Name: 
             </td>
             <td>
-                <strong>B Kameswar Rao</strong> 
+                <strong>Late B Kameswar Rao</strong> 
             </td>
         </tr>
 
@@ -51,6 +51,7 @@
             </td>
             <td>
                 <a href="tel:+919030724910"><strong>9030724910</strong></a>
+                <a href="tel:+919100115242"><strong>9100115242</strong></a>
             </td>
         </tr>
 
