--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Servicenow development center, India.
             </td>
             <td>
-                Since 4 Years 1 months, Currenlty working here.
+                Since 4 Years 10 months, Currenlty working here.
             </td>
         </tr>
         <tr>
@@ -83,7 +83,10 @@
                 <ul>
                     
                     <li>
-                        As an admin, I support end to end maintenance activities on the intances starting from cloneing/upgrading/troubleshooting users issues.
+                        As an admin, I support end to end maintenance activities on the intances starting from cloneing/upgrading/troubleshooting complex users issues.
+                    </li>
+                    <li>
+                        I'm very good at troubleshooting widgets and integrations between the instnaces.
                     </li>
                     <li>
                         Regular deployements of the new changes. And Worked on failed deployements.
