--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <ul>
                     
                     <li>
-                        As an admin, I support end to end maintenance activities on the intances starting from cloneing/upgrading/troubleshooting complex users issues.
+                        Leading the admin team from India region, team support end to end maintenance activities on the intances starting from cloneing/upgrading/troubleshooting complex users issues.
                     </li>
                     <li>
                         I'm very good at troubleshooting widgets and integrations between the instnaces.
