--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                         and providing solutions.
                     </li>
                     <li>
+                        Assiting team members in performance issue or checking bin logs as well as application logs. 
+                    </li>
+                    <li>
                         Assiting new team members as well as juniors associates in their activities or tickets. 
                     </li>
                     <li>
