--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <td>
                 <p>
                     <h1>Vinod Kumar B </h1>
-                     Working as Senior Software Engineer at <strong> Servicenow </strong> 
+                     Currently working as Staff Software Engineer at <strong> Servicenow </strong> 
                 </p>
             </td>
         </tr>
